# html_hoster

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  check_sites.py  pyproject.toml
html_hoster/: __main__.py  auth.py  auth_views.py  config.py  database.py  migrations.py  storage.py  tasks.py  views.py
html_hoster/static/css/: main.css
html_hoster/static/js/: auth.js  theme.js  ui.js
html_hoster/templates/: error.html  index.html  login.html  profile.html  register.html
migrations/versions/: 3b42050e4e2f_初始数据库结构.py
